# Archura_game_engine

./: .gitignore  Build.bat  CMakeLists.txt  DebugRun.bat  GITHUB_SYNC_REPORT.md  GLFW_WORKAROUND.md  LICENSE  PackageGame.bat  Publish_Release.bat  QuickRun.bat  README.md  StartGame.bat  StartGame_Dev.bat  StartGame_Release.bat  build_log.txt  build_log_2.txt  build_log_editor.txt  build_output.txt  imgui.ini  launcher.ps1  launcher_log.txt  launcher_log_2.txt  package.ps1  release_notes_1.0.20.md  setup.ps1  setup_dependencies.bat  update_repo.ps1
assets/shaders/: basic.frag  basic.vert  depth.frag
docs/: 00_START_HERE.md  ADMIN_GUIDE.md  CONSOLE_COMMANDS_REFERENCE.md  CONSOLE_INTEGRATION_EXAMPLE.cpp  CONSOLE_README.md  CONSOLE_SYSTEM_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  QUICK_CONSOLE_REFERENCE.md
indirilenler/src/: glad.c
src/: glad_wrapper.c  imgui_demo_wrapper.cpp  imgui_draw_wrapper.cpp  imgui_impl_glfw_wrapper.cpp  imgui_impl_opengl3_wrapper.cpp  imgui_tables_wrapper.cpp  imgui_widgets_wrapper.cpp  imgui_wrapper.cpp  main.cpp
src/core/: Application.cpp  Application.h  AudioSystem.cpp  AudioSystem.h  ConsoleCommand.cpp  ConsoleCommand.h  ConsoleInterface.cpp  ConsoleInterface.h  DeveloperConsole.cpp  DeveloperConsole.h  Engine.cpp  Engine.h  ImGuiLayer.cpp  ImGuiLayer.h  Logger.cpp  Logger.h  ObjectPool.h  ProjectSerializer.cpp  ProjectSerializer.h  ResourceManager.cpp  ResourceManager.h  Window.cpp  Window.h
src/core/memory/: Allocator.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h
src/core/threading/: JobSystem.cpp  JobSystem.h
src/ecs/: Component.cpp  Component.h  Entity.cpp  Entity.h  System.h
src/ecs_new/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  System.h  Types.h
src/editor/: Editor.cpp  Editor.h
src/game/: Animator.h  AudioSource.h  CommandRegistry.cpp  CommandRegistry.h  DevConsole.cpp  DevConsole.h  FPSConsoleCommands.cpp  FPSConsoleCommands.h  FPSController.cpp  FPSController.h  Lifetime.h  Particle.h  ParticleSystem.cpp  ParticleSystem.h  PauseMenu.cpp  PauseMenu.h  PhysicsSystem.cpp  Projectile.cpp  Projectile.h  ProjectileSystem.cpp  ProjectileSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  SurfaceProperty.h  Weapon.cpp  Weapon.h
src/input/: Input.cpp  Input.h
src/launcher/: Launcher.cpp
src/network/: NetworkManager.cpp  NetworkManager.h
src/rendering/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  HUDRenderer.cpp  HUDRenderer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Shader.cpp  Shader.h  Skybox.cpp  Texture.cpp  Texture.h
